# birdy

./: .gitignore  CMakeLists.txt
src/: CoreTypes.h  main.cpp
